# zero2prod

./: Cargo.toml  Dockerfile  do_spec.yaml
.github/workflows/: cargo-lint-test-format.yml  learn-github-actions.yml
configuration/: base.yaml
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs  telemetry.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
